168 alert icon alignment fix (#169)
Alert icon alignment fix with CSS provided by Matt R

--- a/packages/alert/src/scss/styles.scss
+++ b/packages/alert/src/scss/styles.scss
@@ -8,7 +8,7 @@
 
   &__inner-wrapper {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: flex-start;
     max-width: rem(110);
     margin: 0 auto;
@@ -25,6 +25,7 @@
     }
     .alert__content {
       flex: 1;
+      margin-top: 1.6rem;
     }
   }
 
